--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
                         </a>
                     </span>
                 </div>
+                <div class="flex-line-4">
+                    <span>
+                        <a href="https://github.com/yuval7994/inspo-co" target="_blank">
+                            <img class="netflix-and-crunch" src="assets/inspo-co.png">
+                            <div class="overlay">Inspo.co</div>
+                        </a>
+                    </span>
+                </div>
             </div>
         </section>
 
